volexc/tests/ui/lex_integer_overflow.out
Error: found end of input
   ╭─[lex_integer_overflow.vol:3:9]
   │
 3 │     A = 4294967296
   │         ─────┬────  
   │              ╰────── integer literal '4294967296' is too large (must fit in u32)
───╯