volexc/tests/ui/lex_integer_overflow.vol
// Integer literal exceeds u32::MAX
enum Foo {
    A = 4294967296
}
